<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"

    android:orientation="vertical">

    <TextView
        android:id="@+id/tvQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_full"
        android:gravity="center"
        android:textColor="@color/teal_700"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:text="query" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_half"
        android:text="@string/query_updated"
        android:textSize="20sp" />


    <Button
        android:id="@+id/bContentProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/via_content_provider"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/bAIDL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_full"
        android:text="@string/via_aidl"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/bMessenger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_full"
        android:text="@string/via_messenger"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/bBroadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_full"
        android:enabled="false"
        android:text="@string/via_broadcast"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:visibility="visible"
        tools:visibility="visible" />

</LinearLayout>